syntax = "proto3";

import "google/protobuf/empty.proto";
package mapreduce;

service TaskRequester {
  rpc TaskRequest (WorkerTaskRequest) returns (TaskReply);
  rpc TaskDone (WorkerDoneNotif) returns (google.protobuf.Empty);
}

message WorkerTaskRequest { }

enum TaskType {
  MAP = 0;
  REDUCE = 1;
  FINISHED = 2;
}

message TaskReply {
  TaskType task_type = 1;
  string file_name = 2;
  repeated int32 file_nums = 3;
  int32 task_num = 4;
  int32 n_reduce = 5;
}

message WorkerDoneNotif {
  TaskType task_type = 1;
  int32 task_num = 2;
  string file_name = 3;
}
